hphp/hack/test/typecheck/nonexistent_function.php.exp
File "nonexistent_function.php", line 4, characters 3-14:
Unbound name: `no_such_func` (a global function) (Naming[2049])
File "nonexistent_function.php", line 3, characters 10-12:
Invalid return type (Typing[4336])
File "nonexistent_function.php", line 3, characters 10-12:
Expected `void` because this function does not always return a value
File "nonexistent_function.php", line 3, characters 17-21:
But got `mixed`
File "nonexistent_function.php", line 4, characters 3-14:
Unbound name (typing): `no_such_func` (Typing[4107])
