hphp/hack/test/typecheck/nonexistent_function.php
<?hh

function foo(): mixed {
  no_such_func();
}
